[package]
name = "solana-lq-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
anyhow = "1.0.32"
arrayref = "0.3.7"
bincode = { version = "1.3.3" }
bs58 = { version = "0.5.0" }
clap = { version = "4.1.8", features = ["derive", "env"] }
colorful = "0.2.2"
configparser = "3.0.0"
hex = "0.4.3"
mpl-token-metadata = { version = "^1.11.0", features = ["no-entrypoint"] }
proptest = "1.6.0"
rand = "0.7.3"
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", features = [
    "no-entrypoint",
    "client",
] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.78" }
solana-account-decoder = ">=1.14, <1.17"
solana-client = ">=1.14, <1.17"
solana-sdk = ">=1.14, <1.17"
solana-transaction-status = ">=1.14, <1.17"
spl-associated-token-account = { version = "2.2.0", features = [
    "no-entrypoint",
] }
spl-memo = "4.0.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
spl-token-client = "0.7.0"
tokio = { version = "1.43.0", features = ["full"] }
uint = { git = "https://github.com/raydium-io/parity-common" }
